docs/tests/parser/declarations/valid/TypedefInFunction.src
fn void test() {
    type LocalType = int;
    let LocalType x = 5;
}
