docs/tests/parser/declarations/invalid/VarDeclMissingType.src
fn void test() {
    let x = 5;
}
